<resources>
    <string name="app_name">CryptoExchange</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Şifre</string>
    <string name="prompt_verify_password">Şifreyi doğrula</string>
    <string name="action_sign_in">Giriş Yap</string>
    <string name="action_forgot_pass">Şifremi unuttum</string>
    <string name="action_register">Kaydol</string>
    <string name="action_cancel">İptal</string>
    <string name="action_send_reset_email">Send Reset Email</string>
    <string name="welcome">CryptoExchange</string>
    <string name="reset_password">Reset password</string>
    <string name="action_without_loging">Oturum açmadan devam et</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
</resources>