<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="70dp"
    android:background="@color/background_color"
    tools:context=".ui.login.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_email"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/text_color"
        android:textColorHint="@color/text_color"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/text_color"
        android:textColorHint="@color/text_color"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/txtVerifyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/prompt_verify_password"
        android:imeOptions="actionDone"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/text_color"
        android:textColorHint="@color/text_color"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="13sp"
        android:backgroundTint="@color/card_color"
        android:textColor="@color/white"
        android:text="@string/action_register" />
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="13sp"
        android:backgroundTint="@color/card_color"
        android:textColor="@color/white"
        android:text="@string/action_cancel" />


    <!-- <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="64dp"
         android:layout_marginBottom="64dp" />-->

</LinearLayout>